[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "clk"
description = "A framework to help you have an awesome CLI"
readme = "README.md"
authors = [
    { name = "Samuel Loury", email = "konubinixweb@gmail.com" }
]
requires-python = ">=3.9"
keywords = ["cli", "framework"]
dependencies = [
    "click>=8.2",
    "click-log",
    "click-didyoumean",
    "glob2",
    "colorama",
    "python-dateutil",
    "tabulate==0.8.10",
    "networkx",
    "parsedatetime",
    "pydotplus",
    "pluginbase",
    "appdirs",
    "ipdb",
    "humanize==4",
    "Pygments",
    "cached-property",
    "requests",
    "tqdm",
]
license = "MIT"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
]

[project.scripts]
clk = "clk.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clk*"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.wheel]
universal = true

[tool.flake8]
max-line-length = 200

[tool.setuptools_scm]
version_file = "clk/_version.py"
fallback_version = "0.0.0"
version_scheme = "no-guess-dev"
